--- a/WorkspaceC++.vcxproj
+++ b/WorkspaceC++.vcxproj
@@ -75,12 +75,15 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="01_ArraysAndStrings.cpp" />
+    <ClCompile Include="02_LinkedLists.cpp" />
+    <ClCompile Include="16_LowLevel.cpp" />
     <ClCompile Include="HashTable.cpp" />
     <ClCompile Include="LinkedList.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="01_ArraysAndStrings.h" />
+    <ClInclude Include="16_LowLevel.h" />
     <ClInclude Include="Hashtable.h" />
     <ClInclude Include="LinkedList.h" />
   </ItemGroup>
